typed reactor v2